Make save not depend on a specific version of state node
